--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "adhi-constructions-react": "file:",
     "bootstrap": "^5.3.5",
+    "emailjs-com": "^3.2.0",
     "gsap": "^3.12.7",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
