--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://adhiconstruction.us/",
+  "homepage": ".",
   "name": "adhi-constructions-react",
   "version": "0.1.0",
   "private": true,
